@@ -101,7 +101,7 @@ SOLVER_INCS = -I$(PETSC_INC) -I/Users/runner/work/hp3d/hp3d/petsc/include
 #
 
 VIS_LIBS   = -L$(PETSC_LIB) -lhdf5 -lhdf5_hl -lhdf5_fortran -lhdf5hl_fortran
-VIS_INCS   = -I${PETSC_INC}
+VIS_INCS   = -I$(PETSC_INC)
 
 #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # EXTRA LIBS LINKING
