@@ -79,11 +79,11 @@ MKL_INCS = -I/opt/intel/mkl/include
 # also adding PETSC library dependence (petsc needs phdf5)
 
 ifeq ($(HP3D_COMPLEX),1)
-  PETSC_LIB = /Users/runner/work/hp3d/hp3d/petsc/arch-macos-12-complex-opt/lib
-  PETSC_INC = /Users/runner/work/hp3d/hp3d/petsc/arch-macos-12-complex-opt/include
+  PETSC_LIB = /Users/runner/work/hp3d/hp3d/petsc/arch-macos-14-complex-opt/lib
+  PETSC_INC = /Users/runner/work/hp3d/hp3d/petsc/arch-macos-14-complex-opt/include
 else
-  PETSC_LIB = /Users/runner/work/hp3d/hp3d/petsc/arch-macos-12-real-opt/lib
-  PETSC_INC = /Users/runner/work/hp3d/hp3d/petsc/arch-macos-12-real-opt/include
+  PETSC_LIB = /Users/runner/work/hp3d/hp3d/petsc/arch-macos-14-real-opt/lib
+  PETSC_INC = /Users/runner/work/hp3d/hp3d/petsc/arch-macos-14-real-opt/include
 endif
 
 SOLVER_LIBS = -L$(PETSC_LIB) -lpetsc -ldmumps -lzmumps \
@@ -105,8 +105,8 @@ VIS_INCS   = -I$(PETSC_INC)
 
 #- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # EXTRA LIBS LINKING
-EXTRA_LINK_LIBS    = -L/usr/local/opt/libx11/lib -lX11
-EXTRA_LINK_INCS    = -I/usr/local/opt/libx11/include
+EXTRA_LINK_LIBS    = -L/opt/homebrew/lib -lX11
+EXTRA_LINK_INCS    = -I/opt/homebrew/include
 
 #------------------------------------------------------------------
 # HP3D PATHS
