@@ -3,6 +3,8 @@
 Updates since last version release
 ====================================
 
+- Added support for macOS 14; deprecated support for macOS 12.
+
 - BLAS3-optimized projection-based interpolation routines
   used for updating geometry and Dirichlet DOFs.
 
